--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ggarcia625.github.io/gelt",
+  "homepage": "https://ggarcia625.github.io/gelt/",
   "name": "gelt",
   "private": true,
   "version": "0.0.0",
